Upload and Download images

--- a/app/views/vacations/init.jade
+++ b/app/views/vacations/init.jade
@@ -10,7 +10,7 @@ block content
           input.form-control#name(name='name', type='text', placeholder='Argentina', autofocus=true)
         .form-group
           label(for='start') Start Date
-          input.form-control#start(name='end', type='date')
+          input.form-control#start(name='start', type='date')
         .form-group
           label(for='end') End Date
           input.form-control#end(name='end', type='date')
