--- a/app/static/css/style.less
+++ b/app/static/css/style.less
@@ -11,13 +11,14 @@ nav {
 }
 
 #map{
-  height: 700px;
-  width: 1000px;
+  height: 400px;
+  width: 600px;
   margin: 0 auto;
   border-style: solid;
   border-width: 10px;
   border-color: @bg-color;
   padding: 40px;
+  margin: 10px;
 }
 
 *{
@@ -25,10 +26,10 @@ nav {
   font-size: 13px;
 }
 
-.background {
-  background-image: url('/img/P1030508.JPG');
-  background-size: 100%;
-}
+/*.background {*/
+  /*background-image: url('/img/P1030508.JPG');*/
+  /*background-size: 100%;*/
+/*}*/
 
 .backgroundlow {
   background-color:@bg-color ;
@@ -46,4 +47,29 @@ table thead {
   background-color: white;
 }
 
+#tableContainer {
+  margin: 0px auto;
+  padding: 20px;
+}
 
+.table thead {
+  background-color: lightblue;
+  font-size: 50px !important;
+}
+
+#addImage {
+  text-align: center;
+  margin: 15px;
+}
+
+.photo {
+  display: inline-block;
+  margin: 5px;
+  height: 150px;
+  width:  150px;
+  background-size: cover;
+}
+
+#everything {
+  vertical-align: top;
+}
