--- a/app/views/vacations/index.jade
+++ b/app/views/vacations/index.jade
@@ -1,27 +1,28 @@
 extends ../shared/template
 block content
-  .row
-    .col-xs-12
-      #map
+  .everything
+    .row
+      .col-xs-12
+        #map
 
-  .row.backgroundlow
-    .col-xs-12
-      table.table.table-hover
-        thead
-          th Name
-          th Start
-          th End
-          th Latitude
-          th Longitude
-        tbodyr
-          each vacation in vacations
-            tr
-              td= vacation.name
-              td= moment(vacation.start).format('dddd, MMM Do YY')
-              td= vacation.end
-              td= vacation.lat
-              td= vacation.lng
+    .row.backgroundlow
+      .col-xs-12
+        table.table.table-hover
+          thead
+            th Name
+            th Start
+            th End
+            th Latitude
+            th Longitude
+          tbodyr
+            each vacation in vacations
+              tr(data-name=vacation.name, data-lat=vacation.lat, data-lng=vacation.lng)
+                td: a(href='vacations/#{vacation._id}')= vacation.name
+                td= moment(vacation.start).format(' MMM Do, YYYY')
+                td= moment(vacation.end).format('MMM Do, YYYY')
+                td= vacation.lat
+                td= vacation.lng
 
 block scripts
-  script(src='/js/user/home.js')
+  script(src='/js/user/vacations.js')
 
